<resources>
    <string name="app_name">The Psychic</string>
    <string name="btn_play">Play</string>
    <string name="btn_stats">My Stats</string>
    <string name="fb_win">You won</string>
    <string name="fb_lose">You lose</string>
    <string name="recent_score">Recent Score</string>
    <string name="rand_num">Guessed number</string>
    <string name="select_num">Selected number</string>
    <string name="nb_win">Games won</string>
    <string name="nb_lose">Games lost</string>
    <string name="max_score">Maximum score</string>
    <string name="min_score">Minimum score</string>
    <string name="btn_replay">Replay</string>
    <string name="btn_return">Return</string>
    <string name="btn_menu">Menu</string>


        <string-array name="array_technology">
            <item>Android</item>
            <item>Java</item>
            <item>Php</item>
            <item>Hadoop</item>
            <item>Sap</item>
            <item>Python</item>
            <item>Ajax</item>
            <item>C++</item>
            <item>Ruby</item>
            <item>Rails</item>
            <item>.Net</item>
            <item>Perl</item>
        </string-array>


</resources>
