<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvscore_recent"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:padding="2dp"
            android:text="@string/recent_score"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>
        <TextView
            android:id="@+id/tvnbwon"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:padding="2dp"
            android:text="@string/nb_win"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>
        <TextView
            android:id="@+id/tvnblose"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="2dp"
            android:text="@string/nb_lose"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>
        <TextView
            android:id="@+id/tvscoremin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="2dp"
            android:text="@string/min_score"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>
        <TextView
            android:id="@+id/tvscoremax"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="2dp"
            android:text="@string/max_score"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true" >


        <Button
            android:id="@+id/btnretour"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:text="@string/btn_return"
            android:background="@drawable/boutton"

            />

    </LinearLayout>
</RelativeLayout>