<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvdeviner"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:padding="2dp"
            android:text="@string/rand_num"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>

        <TextView
            android:id="@+id/tvselectioné"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="2dp"
            android:text="@string/select_num"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp"
            android:background="#f2f5df"/>

        <ImageView
            android:id="@+id/imgconsequence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:visibility="visible"></ImageView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btnmenu"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_weight="40"
            android:text="@string/btn_menu"
            android:background="@drawable/boutton"

            />

        <Button
            android:id="@+id/btnRejouer"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_weight="40"
            android:text="@string/btn_replay"
            android:background="@drawable/boutton"

            />

    </LinearLayout>
</RelativeLayout>